--- a/applications/rightnow/styles-imports/_chat.scss
+++ b/applications/rightnow/styles-imports/_chat.scss
@@ -4,9 +4,7 @@ body.lib_chatlanding {
 
 // start of taken directly from page
 
-    html, head, body {
-        background-color: #F5F5F5;
-    }
+    background-color: #F5F5F5;
 
     #rn_PageContent {
         margin:0;
